--- a/_publications/1. PFLU and FPFLU.md
+++ b/_publications/1. PFLU and FPFLU.md
@@ -1,7 +1,7 @@
 ---
 title: "PFLU and FPFLU: Two novel non-monotonic activation functions in convolutional neural networks"
 collection: publications
-category: articles
+category: manuscripts
 permalink: /publication/1. PFLU and FPFLU
 excerpt: 'This paper is about activation functions.'
 date: 2021
