--- a/_publications/2024-01-01-sdaa.md
+++ b/_publications/2024-01-01-sdaa.md
@@ -8,7 +8,7 @@ date: 2024-01-01
 venue: 'International Journal of Pattern Recognition and Artificial Intelligence'
 slidesurl: ''
 paperurl: 'https://mengzhu0308.github.io/mengzhu0308.githup.io/files/papers/2024-01-01-sdaa.pdf'
-citation: 'Meng Zhu, Weidong Min*, Qi Wang, et al. PFLU and FPFLU: Two novel non-monotonic activation functions in convolutional neural networks. Neurocomputing, 2021, 429: 110-117. DOI: 10.1016/j.neucom.2020.11.068.'
+citation: 'Meng Zhu, Weidong Min*, Hongyue Xiang, et al. Spatial decomposition and aggregation for attention in convolutional neural networks. International Journal of Pattern Recognition and Artificial Intelligence, 2024, 38 (1): 1-15. DOI: 10.1142/S0218001423520195.'
 ---
 
 # Abstract
