--- a/_posts/2025-04-29-mmpi.md
+++ b/_posts/2025-04-29-mmpi.md
@@ -1,20 +1,9 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'MMPI心理测评答题技巧'
+date: 2025-04-29
+permalink: /posts/2025/04/mmpi/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - MMPI
+  - 心理测评
+paperurl: 'https://mengzhu0308.github.io/mengzhu0308.githup.io/files/blog/2025-04-29-mmpi.pdf'
 ---
-
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
-
-Headings are cool
-======
-
-You can have many headings
-======
-
-Aren't headings cool?
-------
