--- a/_posts/2025-05-10-software.md
+++ b/_posts/2025-05-10-software.md
@@ -4,5 +4,5 @@ date: 2025-05-10
 permalink: /posts/2025/05/software/
 tags:
   - Software
-paperuruanjruan'jttps://mengzhu0308.github.io/mengzhu0308.githup.io/files/blog/2025-05-10-software.pdf'
+paperurl'jttps://mengzhu0308.github.io/mengzhu0308.githup.io/files/blog/2025-05-10-software.pdf'
 ---
