--- a/_publications/2023-07-01-mscnet.md
+++ b/_publications/2023-07-01-mscnet.md
@@ -3,7 +3,7 @@ title: "MSCNet: Dense vehicle counting method based on multi-scale dilated convo
 collection: publications
 category: manuscripts
 permalink: /publication/2023-07-01-mscnet
-excerpt: 'This paper is about activation functions.'
+excerpt: 'This paper is about dense vehicle counting.'
 date: 2023-07-01
 venue: 'GeoInformatica'
 slidesurl: ''
