--- a/_publications/2024-01-01-sdaa.md
+++ b/_publications/2024-01-01-sdaa.md
@@ -7,6 +7,8 @@ excerpt: 'This paper is about channel-spatial mixed attention.'
 date: 2024-01-01
 venue: 'International Journal of Pattern Recognition and Artificial Intelligence'
 slidesurl: ''
+arXiv: ''
+GitHub: ''
 paperurl: 'https://mengzhu0308.github.io/mengzhu0308.githup.io/files/papers/2024-01-01-sdaa.pdf'
 citation: 'Meng Zhu, Weidong Min*, Hongyue Xiang, et al. Spatial decomposition and aggregation for attention in convolutional neural networks. International Journal of Pattern Recognition and Artificial Intelligence, 2024, 38 (1): 1-15. DOI: 10.1142/S0218001423520195.'
 ---
