--- a/_publications/2023-07-01-mscnet.md
+++ b/_publications/2023-07-01-mscnet.md
@@ -7,8 +7,8 @@ excerpt: 'This paper is about dense vehicle counting.'
 date: 2023-07-01
 venue: 'GeoInformatica'
 slidesurl: ''
-arXiv: ''
-GitHub: ''
+arXivurl: ''
+GitHuburl: ''
 paperurl: 'https://mengzhu0308.github.io/mengzhu0308.githup.io/files/papers/2023-07-01-mscnet.pdf'
 citation: 'Qiyan Fu, Weidong Min*, Chubbo Li, Haoyu Zhao, Ye Cao, Meng Zhu. MSCNet: Dense vehicle counting method based on multi-scale dilated convolution channel-aware deep network. GeoInformatica, 2024, 28 (2): 245-269. DOI: 10.1007/s10707-023-00503-7.'
 ---
